--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -8,7 +8,7 @@
     "lint:js": "eslint --ignore-path .gitignore --ext .js src",
     "lint:css": "stylelint ./src/**/*.css",
     "lint": "npm run lint:css && npm run lint:js",
-    "test": "jest"
+    "test": "jest --config=config/jest.config.js"
   },
   "devDependencies": {
     "@crrntly/babel-preset-react-app": "^0.1.0",
@@ -18,6 +18,8 @@
     "chalk": "^2.4.2",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
     "eslint": "^5.12.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.16.0",
@@ -35,6 +37,7 @@
     "postcss-preset-env": "^6.5.0",
     "postcss-reporter": "^6.0.1",
     "react-dev-utils": "^7.0.1",
+    "react-test-renderer": "^16.7.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
