--- a/packages/babel-preset-react-app/package.json
+++ b/packages/babel-preset-react-app/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.1",
   "main": "index.js",
   "license": "MIT",
+  "repository": "crrntly/react-stuff",
+  "bugs": {
+    "url": "https://github.com/crrntly/react-stuff/issues"
+  },
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
