--- a/packages/babel-preset-react-app/package.json
+++ b/packages/babel-preset-react-app/package.json
@@ -1,23 +1,27 @@
 {
   "name": "@crrntly/babel-preset-react-app",
   "version": "0.1.2",
-  "main": "index.js",
   "license": "MIT",
-  "repository": "crrntly/react-stuff",
-  "bugs": {
-    "url": "https://github.com/crrntly/react-stuff/issues"
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com/crrntly/tools.git",
+    "directory": "packages/babel-preset-react-app"
   },
+  "bugs": {
+    "url": "https://github.com/crrntly/tools/issues"
+  },
+  "main": "index.js",
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.3.1",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/runtime": "^7.12.5",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-lodash": "^3.3.4",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.20"
   }
 }
