--- a/packages/eslint-config-react-app/package.json
+++ b/packages/eslint-config-react-app/package.json
@@ -1,21 +1,19 @@
 {
   "name": "@crrntly/eslint-config-react-app",
   "version": "0.1.4",
-  "description": "ESLint configuration for React applications",
-  "main": "index.js",
   "license": "MIT",
-  "repository": "crrntly/react-stuff",
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com/crrntly/tools.git",
+    "directory": "packages/eslint-config-react-app"
+  },
   "bugs": {
-    "url": "https://github.com/crrntly/react-stuff/issues"
+    "url": "https://github.com/crrntly/tools/issues"
   },
-  "peerDependencies": {
-    "babel-eslint": "10.x",
-    "eslint": "5.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-react": "7.x"
-  },
+  "main": "index.js",
   "dependencies": {
-    "confusing-browser-globals": "^1.0.5"
+    "@crrntly/eslint-config": "^0.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5"
   }
 }
